fixed spacing and sizing of children images

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,7 +41,6 @@
 
 .top-nav li {
   border-radius: 20px;
-  background: firebrick;
   flex-grow: 1;
   text-align: center;
   margin: 0 3px;
@@ -103,6 +102,15 @@ h4 {
 p {
   color: #78cbd0;
 }
+
+.chitlins {
+  margin-top: 20px;
+}
+
+.chitlins img {
+  width: 100%;
+}
+
 .social {
   display: flex;
   justify-content: space-between;
